# bbGameSimulator

./: .gitignore  README.md  compileAndRunWithCoverage.sh
examples/: fff1.csv  lbl4.csv
src/: Action.cpp  Bases.cpp  Bases.hpp  CMakeLists.txt  GameState.cpp  GameState.hpp  Player.cpp  Player.hpp  action.cpp  action.h  astros.csv  fff2.csv  fff3.csv  fff4.csv  lbl1.csv  lbl2.csv  lbl3.csv  main.cpp
test/: basesTest.cpp
